# advent2024

./: .gitignore  README.md  pyproject.toml  requirements.txt  sonar-project.properties  tox.ini  x.py
.github/: CODEOWNERS
.trunk/: trunk.yaml
01/: 01.py
02/: 02.py
03/: 03.py
data/: day06_test1.txt  day06_test2.txt  day06_test3.txt  day10_test1.txt  day10_test2.txt  day13_test1.txt  day13_test2.txt  day15_test1.txt  day15_test2.txt  day15_test3.txt  day15_test4.txt  day15_test5.txt  day15_test8.txt  day16_test1.txt  day20_test1.txt  day24_fix.txt
src/: common.py  common.py.bak  day01.py  day01.py.bak  day02.py  day02.py.bak  day03.py  day03.py.bak  day04.py  day05.py  day05.py.bak  day06.py  day06.py.bak  day07.py  day07.py.bak  day08.py  day08.py.bak  day09.py  day09.py.bak  day10.py  day10.py.bak  day11.py  day12.py  day12.py.bak  day13.py  day14.py  day15.py  day15.py.bak  day16.py  day17.py  day18.py  day19.py  day19.py.bak  day20.py  day21.py  day21.py.bak  day22.py  day23.py  day24.py  day25.py
template/: newday.sh
tests/: .test_day04.py.swp  test_common.py  test_common.py.bak  test_day01.py  test_day02.py  test_day02.py.bak  test_day03.py  test_day03.py.bak  test_day04.py  test_day04.py.bak  test_day05.py  test_day05.py.bak  test_day06.py  test_day06.py.bak  test_day07.py  test_day07.py.bak  test_day08.py  test_day08.py.bak  test_day09.py  test_day09.py.bak  test_day10.py  test_day10.py.bak  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day20.py  (+5 more)
(+3 files in other folders)
